<?xml version="1.0"?>
<package format="2">
  <name>teb_local_planner_tutorials</name>
  <version>0.2.3</version>
  <description>The teb_local_planner_tutorials package</description>

  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>
  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teb_local_planner_tutorials</url>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>stage_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>teb_local_planner</depend>
  <depend>move_base</depend>
  <depend>map_server</depend>
  <depend>amcl</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>lcm_to_ros</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
